fixing styling for overflow

--- a/web-app/src/styles/History.scss
+++ b/web-app/src/styles/History.scss
@@ -1,4 +1,3 @@
 .history {
     max-height: 80vh;
-    overflow: auto;
 }
